--- a/templates/accounts/dashbord.html
+++ b/templates/accounts/dashbord.html
@@ -36,7 +36,8 @@
      <br>
      <br>
       <br>
-      <div class="row row-cols-1 row-cols-md-3 g-4 px-4 py-2 px-md-5" >
+      <div class="d-flex justify-content-center">
+      <div class="row row-cols-1 row-cols-md-1 g-4 px-4 py-2 px-md-5" >
         <div class="col"></div>
           <div class="card mb-3 text-center " style="max-width: 25rem;background-color: #162937;border-width: 0.08cm;border-color: #0d6efd;">
             <div class="row g-0" >
@@ -50,17 +51,33 @@
               <div class="col-md-8">
               <div class="card-body">
               <h5 class="card-title " style="color:#e1e1e1">SIMPLIZ TURF</h5>
-              <p class="card-text" style="color:#e1e1e1">Bookings for simpliz turf . Located at Chandor,salcette Goa.</p>
-              <form name="login" method="post" action=""> 
-              <button type="submit" name="sendotp" value="sendotp" class="btn btn-outline-primary me-2"><b>Book Simpliz Turf</b></button>
-              <!-- <a class="card-text" href="/booking/{{date}}" ><button class="btn btn-outline-info me-2" type="button">Book Simpliz Turf</button></a> -->
-              {% csrf_token %}   
-              </form>
+              <p class="card-text" style="color:#e1e1e1">Bookings for simpliz turf. Located at Chandor,salcette Goa.</p>
+              
+              <a class="btn btn-outline-info me-2" href="{% url 'booking' phone ground_name1 date_today  %}"><b>Book Simpliz Turf</b></a>
             </div>
           </div>
         </div>
       </div>
       
+      <!-- &nbsp;
+      
+          <div class="card mb-3 text-center " style="max-width: 25rem;background-color: #162937;border-width: 0.08cm;border-color: #0d6efd;">
+            <div class="row g-0" >
+              <div class="col-md-4">
+                <br>
+                <br>
+                {% load static %}
+                <img src="{% static 'simpliz_turf.png' %}" alt="Simpliz Turf" class="img-fluid rounded-start img-responsive" style="min-height: 3cm;min-width: 3.5cm;">
+                 <img src="https://www.pexels.com/search/background%20image/" class="img-fluid rounded-start" alt="..."> 
+              </div>
+              <div class="col-md-8">
+              <div class="card-body">
+              <h5 class="card-title " style="color:#e1e1e1">SIMPLIZ TURF</h5>
+              <p class="card-text" style="color:#e1e1e1">Bookings for Test. Located at Test,salcette Goa.</p>
+              <a class="btn btn-outline-primary me-2" href="{% url 'booking' phone ground_name2 date_today  %}"><b>Book Test</b></a>
+            </div>
+          </div> -->
+            </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
