--- a/templates/accounts/dashbord.html
+++ b/templates/accounts/dashbord.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bookings</title>
+    <title>Dashbord</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   <body style="--stripe: #cfd8dc;
@@ -22,7 +22,8 @@
       <nav class="navbar bg-dark bg-opacity-75 py-0">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
-              <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+              {% load static %}
+              <img src="{% static 'logo.jpg' %}" alt="" width="30" height="24" class="d-inline-block align-text-top">
               <h7 style="color:rgb(177, 228, 235); font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;" > &nbsp; Booking Website</h7>
             </a>
             <div class="d-flex flex-row-reverse">
