--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Login To Book</title>
+    {% load static %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel = "icon" href ={% static 'simpliz_turf.png' %}   type = "image/x-icon">
   </head>
   <body>
-    
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 <!-- Section: Design Block -->
@@ -59,13 +60,12 @@
     <div class="container  text-center text-lg-start my-5">
       <div class="row gx-lg-5 align-items-center mb-5">
         <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
-          <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
-            The best offer <br />
-            <span style="color: hsl(218, 81%, 75%)">for your business</span>
+          <h1 class="my-5 display-9 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
+            Looking to book Futsal grounds in Goa? Your search ends here!   <br />
+            <span style="color: hsl(218, 81%, 75%)"></span>
           </h1>
-          <p class="mb-1 opacity-70" style="color: hsl(218, 81%, 85%)">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Temporibus, expedita iusto veniam atque
+          <p class="mb-5 opacity-70" style="color: hsl(218, 81%, 85%)">
+            <h3 style="color: hsl(218, 81%, 85%)">Book Futsal Turfs Now</h3>
         </div>
         <!-- <script language="JavaScript">
           function showInput() {
@@ -79,10 +79,11 @@
   
           <div class="card bg-glass login-box">
             <div class="card-body px-4 py-5 px-md-5">
+              <h5 style="color: hsl(219, 71%, 57%)">Kindly enter your details </h5>
               <form name="login" method="post" action=""> 
                 <!-- 2 column grid layout with text inputs for the first and last names -->
                 <div class="row">
-                  <div class="col-md-6 mb-4">
+                  <div class="col-md-6 mb-7">
                     <div class="form-outline">
                       <input type="text" id="form3Example1"  name="username" class="form-control" placeholder="Name"  />
                       <label class="form-label" for="form3Example1">Name</label>
@@ -90,7 +91,7 @@
                   </div>
                   
                 <!-- phone number input -->
-                <div class="form-outline mb-4">
+                <div class="form-outline mb-7">
                   <input type="number" id="form3Example3" name="phone_number" required class="form-control" placeholder="0123456789" maxlength="10" />
                   <label class="form-label" for="form3Example3">Phone No</label>
                 </div>
