--- a/templates/accounts/verifyotp.html
+++ b/templates/accounts/verifyotp.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>OTP Verifiction</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   <body>
@@ -55,17 +55,15 @@
     </style>
   
   <div class="container  text-center text-lg-start my-5">
-      <div class="row gx-lg-5 align-items-center mb-5">
-        <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
-          <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
-            The best offer <br />
-            <span style="color: hsl(218, 81%, 75%)">for your business</span>
-          </h1>
-          <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Temporibus, expedita iusto veniam atque
-          </p>
-        </div>
+    <div class="row gx-lg-5 align-items-center mb-5">
+      <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
+        <h1 class="my-5 display-9 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
+          Looking to book Futsal grounds in Goa? Your search ends here!   <br />
+          <span style="color: hsl(218, 81%, 75%)"></span>
+        </h1>
+        <p class="mb-5 opacity-70" style="color: hsl(218, 81%, 85%)">
+          <h3 style="color: hsl(218, 81%, 85%)">Book Futsal Turfs Now</h3>
+      </div>
   
         <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
           <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
@@ -73,6 +71,9 @@
   
           <div class="card bg-glass">
             <div class="card-body px-4 py-5 px-md-5">
+              
+                <span style="color: hsl(218, 78%, 54%)">Enter your otp</span>
+              
               <form name="verifyotp" method="post" action="" > 
                 <!-- OTP input -->
                 <div class="form-outline mb-4">
