--- a/templates/accounts/dashbord.html
+++ b/templates/accounts/dashbord.html
@@ -23,7 +23,7 @@
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
               {% load static %}
-              <img src="{% static 'logo.jpg' %}" alt="" width="30" height="24" class="d-inline-block align-text-top">
+              <img src="{% static 'dashbordbackground.jpg' %}" alt="" width="30" height="24" class="d-inline-block align-text-top">
               <h7 style="color:rgb(177, 228, 235); font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;" > &nbsp; Booking Website</h7>
             </a>
             <div class="d-flex flex-row-reverse">
