--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -6,7 +6,7 @@
     <title>Login To Book</title>
     {% load static %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel = "icon" href ={% static 'simpliz_turf.png' %}   type = "image/x-icon">
+    <link rel = "icon" href ={% static 'logo.jpg' %}   type = "image/x-icon">
   </head>
   <body>
     
