--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -6,9 +6,19 @@
     <title>Login To Book</title>
     {% load static %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel = "icon" href ={% static 'logo.jpg' %}   type = "image/x-icon">
+    <link rel = "icon" href ={% static 'logo.jpg' %}   type = "image/x-icon" >
+    <style>
+       body {
+            opacity: 0;
+            transition: opacity 2s;
+        }
+    </style>
+</style>
+  
+  
+  
   </head>
-  <body>
+  <body onload="document.body.style.opacity='1'">
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 <!-- Section: Design Block -->
@@ -79,7 +89,7 @@
   
           <div class="card bg-glass login-box">
             <div class="card-body px-4 py-5 px-md-5">
-              <h5 style="color: hsl(219, 71%, 57%)">Kindly enter your details </h5>
+              <h6 style="color: hsl(219, 71%, 57%)">Kindly enter your details </h6>
               <form name="login" method="post" action=""> 
                 <!-- 2 column grid layout with text inputs for the first and last names -->
                 <div class="row">
