--- a/templates/accounts/verifyotp.html
+++ b/templates/accounts/verifyotp.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>OTP Verifiction</title>
+    {% load static %}
+      <link rel = "icon" href ={% static 'logo.jpg' %}   type = "image/x-icon" >
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  
+    
   </head>
   <body>
     
@@ -86,6 +90,13 @@
                 </button>
                 <!-- Register buttons -->
                 {% csrf_token %} 
+                {% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
               </form>
             </div>
           </div>
