--- a/templates/accounts/verifyotp.html
+++ b/templates/accounts/verifyotp.html
@@ -62,11 +62,13 @@
     <div class="row gx-lg-5 align-items-center mb-5">
       <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
         <h1 class="my-5 display-9 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
-          Looking to book Futsal grounds in Goa? Your search ends here!   <br />
+          Would you like to book Futsal Grounds in Goa? <br> Find out more here!   <br />
           <span style="color: hsl(218, 81%, 75%)"></span>
         </h1>
         <p class="mb-5 opacity-70" style="color: hsl(218, 81%, 85%)">
-          <h3 style="color: hsl(218, 81%, 85%)">Book Futsal Turfs Now</h3>
+          <h3 style="color: hsl(218, 81%, 85%)">Check out Futsal Turfs Now.</h3>
+        <h3 style="color: hsl(218, 81%, 85%)">Simpliz Turf is already onboard..</h3>
+
       </div>
   
         <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
@@ -76,7 +78,7 @@
           <div class="card bg-glass">
             <div class="card-body px-4 py-5 px-md-5">
               
-                <span style="color: hsl(218, 78%, 54%)">Enter your otp</span>
+                <span style="color: hsl(218, 78%, 54%)">Enter your otp.</span>
               
               <form name="verifyotp" method="post" action="" > 
                 <!-- OTP input -->
