--- a/templates/accounts/booking.html
+++ b/templates/accounts/booking.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Book Court</title>
     {% load static %}
+    <link href="http://fonts.cdnfonts.com/css/sulphur-point" rel="stylesheet">
       <link rel = "icon" href ={% static 'logo.jpg' %}   type = "image/x-icon" >
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
@@ -13,12 +14,13 @@
       <nav class="navbar bg-dark bg-opacity-80 py-0">
         <div class="container-fluid">
           <a class="navbar-brand" href="{% url 'dashbord' phone  %}">
-            <img src="{% static 'logo.jpg' %}" alt="" width="20" height="30" class="d-inline-block align-text-top">
-            <h7 style="color:rgb(177, 228, 235); font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;" > &nbsp; Booking WebSite</h7>
+            <img src="{% static 'logo.jpg' %}" alt="" width="25" height="30" class="d-inline-block align-text-top">
+            <link href='https://fonts.googleapis.com/css?family=Alegreya Sans SC' rel='stylesheet'>
+            <h7 style="color:rgb(177, 228, 235); font-family: 'Alegreya Sans SC';font-size: 22px;" > &nbsp; Booking WebSite </h7>
           </a>
           <div class="d-flex flex-row-reverse">
-            <div class="p-2" style="color:rgb(177, 228, 235);"><a href="/login/"> <button class="btn btn-outline-danger me-2" type="button">Logout</button></a></div>
-            <div class="p-2" style="color:rgb(177, 228, 235);"><h5 style="color:rgb(177, 228, 235);"><h5 style="color:rgb(177, 228, 235); font-family:Garamond;">{{phone}}</h5></div>
+            <div class="p-2" style="color:rgb(177, 228, 235);"><a href="/login/"> <button class="btn btn-outline-danger me-2 " type="button">Logout</button></a></div>
+            <div class="p-2" style="color:rgb(177, 228, 235);"><h5 style="color:rgb(177, 228, 235);"><h5 style="color:rgb(177, 228, 235); font-family: 'Alegreya Sans SC';">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{phone}}</h5></div>
           </div>
           
         </div>
@@ -51,9 +53,11 @@
           {% csrf_token %}   
           </form> -->
        <br>
-      <div class="d-flex justify-content-center" style="font-family:'Andale Mono', 'monospace'"><b>{{ current_date }}</b></div>
+      <div class="d-flex justify-content-center" style="font-family:'Andale Mono', 'monospace';"><b><h4>{{ current_date }}</h4></b></div>
      
     </div>
+
+
 <div style="--stripe: #cfd8dc;
 --bg: #e1e1e1;
 
@@ -64,23 +68,40 @@ background: linear-gradient(135deg, var(--bg) 25%, transparent 25%) -50px 0,
 background-size: 100px 100px;
 background-color: var(--stripe);" class="card bg-glass " style="color: blueviolet;">
   <div class="card-body px-5 py-2 px-md-5">
+    <style>
+  #one {
+  position: fixed;
+  top: 45%;
+  right: 15px;
+  background: rgba(0, 200, 255, 0.912);
   
+}
+
+.outer {
+  width: 500px;
+  height: 300px;
+  overflow: scroll;
+  padding-left: 150px;
+}
+
+    </style>
+   <div class="box" id="one" style="box-shadow: rgba(130, 138, 130, 0.346) 3px 3px 20px 12px; ;writing-mode: vertical-lr; text-orientation: sideways-right; font-size:large;"> Note: The duration is 1 hour.</div>
   <table class="table  text-center ">
     <thead bgcolor="#0dcaf0">
       <tr >
         <th scope="col" ><h3></h3>SLOT</th>
-        <th scope="col" ><h3></h3>DURATION</th>
+       
         <th scope="col">STATUS</th>
         
       </tr>
     </thead>
     {% for i in status%}
-    <tbody class="table-dark">
+    <tbody class="table-dark" style="box-shadow: rgba(58, 58, 58, 0.133) 3px 3px 20px 12px;">
       <tr>
         
 
-        <th scope="row"><h5><b>{{i.slot_time}}:00</b></h5></th>
-        <td><h5><b>1 Hour</b></h5></td>
+        <th scope="row" style=" padding-top: 12px ;"><h5><b>{{i.slot_time}}:00</b></h5></th>
+        
         <td>
           {% if i.is_booked is False  %}
             {% if i.phone_number_registered == none  %}
