--- a/templates/accounts/already_booked.html
+++ b/templates/accounts/already_booked.html
@@ -1,7 +1,6 @@
 <html>
     <head>
-      <meta http-equiv="refresh" content="10">
-        <meta http-equiv="refresh" content="3;url=/dashbord/{{phone}}" />
+        <meta http-equiv="refresh" content="10;url=/dashbord/{{phone}}" />
     </head>
     <style>
         .animate-charcter
@@ -9,12 +8,12 @@
    text-transform: uppercase;
   background-image: linear-gradient(
     -225deg,
-    #231557 0%,
-    #44107a 29%,
-    #ff1361 67%,
-    #fff800 100%
+    #301d78 0%,
+    #3f126f 29%,
+    #872a91 67%,
+    #9b336c 100%
   );
-  padding-top: 20%;
+  padding-top: 5%;
   padding-left: 10%;
   background-size: auto auto;
   background-clip: border-box;
@@ -26,7 +25,7 @@
   -webkit-text-fill-color: transparent;
   animation: textclip 2s linear infinite;
   display: inline-block;
-      font-size: 100px;
+      font-size: 35px;
 }
 
 @keyframes textclip {
@@ -39,11 +38,11 @@
     <body>
         <div class="container" style="justify-content: center;">
             <div class="row">
-              <div class="col-md-12 text-center">
-                <h7 class="animate-charcter" > Booking Successful</h7>
+              <div class="text-center">
+                <p class="animate-charcter" style="justify-content: center" >The slot you are looking for got booked just few seconds ago. Please go back and book another slot. THANKOU... </p>
               </div>
             </div>
-            <p style="text-align:center">you will be redirected in 3 seconds.......... </p>
+            <h6 style="text-align:center; font-size: 30px;">you will be redirected in 10 seconds. Please wait...... </h6>
           </div>
     </body>
 </html>
