--- a/templates/accounts/canceled.html
+++ b/templates/accounts/canceled.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-      
+
       <meta http-equiv="refresh" content="3;url=/dashbord/{{phone}}" />
     </head>
     <style>
@@ -40,7 +40,7 @@
         <div class="container" style="justify-content: center;">
             <div class="row">
               <div class="col-md-12 text-center">
-                <h7 class="animate-charcter" > Booking Successful</h7>
+                <h7 class="animate-charcter" > Booking Canceled</h7>
               </div>
             </div>
             <p style="text-align:center">you will be redirected in 3 seconds.......... </p>
