--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -108,6 +108,12 @@
                   <label class="form-label" for="form3Example3">Phone No</label>
                 </div>
 
+                  <!-- email input -->
+                <div class="form-outline mb-7">
+                  <input type="email" id="form3Example3" name="email" required class="form-control" placeholder="sample@gmail.com" maxlength="254" />
+                  <label class="form-label" for="form3Example3">Email</label>
+                </div>
+
                 <!-- otp send button -->
                 <button type="submit" name="sendotp" value="sendotp" class="btn btn-warning">Send OTP</button>
                 <!-- Register buttons -->
