--- a/templates/accounts/booking.html
+++ b/templates/accounts/booking.html
@@ -55,6 +55,7 @@
           </form> -->
        <br>
       <div class="d-flex justify-content-center" style="font-family:'Andale Mono', 'monospace';"><b><h4>{{ current_date }}</h4></b></div>
+    <div class="d-flex justify-content-center" style="font-family:'Andale Mono', 'monospace';"><b><h4>{{ current_day }}</h4></b></div>
      
     </div>
 
