--- a/templates/accounts/bookingconfirm.html
+++ b/templates/accounts/bookingconfirm.html
@@ -47,16 +47,8 @@
       <br>
       <div class="row row-cols-1 row-cols-md-3 g-4"  >
         <div class="col "></div>
-          <div class="card mb-3 text-center " style="  max-width: 25rem;background-color: #162937;border-width: 0.08cm;border-color: #0d6efd; padding: 1cm; box-shadow: rgba(9, 9, 9, 0.190) 3px 3px 20px 12px;">
-            
-              <!-- <div class="col-md-4"
-                <br>
-                <br>
-                {% load static %}
-                <img src="{% static 'simpliz_turf.png' %}" alt="Simpliz Turf" class="img-fluid rounded-start img-responsive" style="min-height: 3cm;min-width: 3.5cm;">
-                <img src="https://www.pexels.com/search/background%20image/" class="img-fluid rounded-start" alt="..."> 
-              </div> -->
-              
+          <div class="card mb-3 text-center " style="  max-width: 25rem;background-color: #162937;border-width: 0.08cm;border-color: #00bfff; padding: 2cm; box-shadow: rgba(9, 9, 9, 0.190) 3px 3px 20px 12px;">
+
               
               <h4 class="card-title text-white  " style="font-family:  serif"  >Hello {{user_info.username}},<br> </h4>
               
