--- a/templates/accounts/bookingconfirm.html
+++ b/templates/accounts/bookingconfirm.html
@@ -47,7 +47,7 @@
       <br>
       <div class="row row-cols-1 row-cols-md-3 g-4"  >
         <div class="col "></div>
-          <div class="card mb-3 text-center " style="  max-width: 25rem;background-color: #162937;border-width: 0.08cm;border-color: #00bfff; padding: 2cm; box-shadow: rgba(9, 9, 9, 0.190) 3px 3px 20px 12px;">
+          <div class="card mb-3 text-center " style="  max-width: 25rem;background-color: #162937; padding:0.5cm; border-width: 0.08cm;border-color: #00bfff; padding: 0.5cm; box-shadow: rgba(9, 9, 9, 0.190) 3px 3px 20px 12px;">
 
               
               <h4 class="card-title text-white  " style="font-family:  serif"  >Hello {{user_info.username}},<br> </h4>
