--- a/templates/accounts/bookingconfirm.html
+++ b/templates/accounts/bookingconfirm.html
@@ -45,7 +45,7 @@
      <br>
      <br>
       <br>
-      <div class="row row-cols-1 row-cols-md-3 g-4"  >
+      <div class="row row-cols-1 row-cols-md-3 g-4 p-1"  >
         <div class="col "></div>
           <div class="card mb-3 text-center " style="  max-width: 25rem;background-color: #162937; border-width: 0.08cm;border-color: #00bfff; padding: 1cm; box-shadow: rgba(9, 9, 9, 0.190) 3px 3px 20px 12px;">
 
