--- a/templates/accounts/cancelconfirm.html
+++ b/templates/accounts/cancelconfirm.html
@@ -44,7 +44,7 @@
      <br>
      <br>
       <br>
-      <div class="row row-cols-1 row-cols-md-3 g-4"  >
+      <div class="row row-cols-1 row-cols-md-3 g-4 p-4"  >
         <div class="col "></div>
           <div class="card mb-3 text-center " style="  max-width: 25rem;background-color: #162937;border-width: 0.05cm;border-color: #0d6efd; padding: 1cm;">
             
